modified mobile menu

--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -9,13 +9,45 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="index.html"><img src="img/header.menu/logo-main.svg" alt="logo-main"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-    </nav>
+    </nav> -->
         
+    <div class="header-container">
+        <div class="header-container__menu">
+            <a href="index.html" class="navbar-brand"><img src="img/header.menu/logo-main.svg" alt="logo-main"></a>
+            
+            <div class="header-container__menu-icon">
+                <span class="line"></span>
+            </div>
+
+            <nav class="menu-body">
+                <ul class="menu-body__list">
+                    <li class="menu-body__list-item"><a href="about_us.html" class="header__menu-link">
+                        ABOUT US
+                    </a></li>
+                    <li class="menu-body__list-item"><a href="contact_us.html" class="header__menu-link">
+                        DISTRIBUTION
+                    </a></li>
+                    <li class="menu-body__list-item"><a href="collection.html" class="header__menu-link">
+                        COLLECTION
+                    </a></li>
+                    <li class="menu-body__list-item"><a href="contact_us.html" class="header__menu-link">
+                        TESTING
+                    </a></li>
+                    <li class="menu-body__list-item"><a href="wineclub.html" class="header__menu-link">
+                        WINE CLUB
+                    </a></li>
+                    <li class="menu-body__list-item"><a href="" class="test"><a href="contact_us.html" class="header__menu-link">
+                        CONTACTS
+                    </a></a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 
     <nav class="header__menu">
         <div class="header__wrapper-list">
