modified mobile menu

--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -41,7 +41,7 @@
                     <li class="menu-body__list-item"><a href="wineclub.html" class="header__menu-link">
                         WINE CLUB
                     <a></li>
-                    <li class="menu-body__list-item"><a href="" class="test"><a href="contact_us.html" class="header__menu-link">
+                    <li class="menu-body__list-item"><a href="contact_us.html" class="header__menu-link">
                         CONTACTS
                     </a></li>
                 </ul>
