modified mobile menu

--- a/common.header-menu.partial.html
+++ b/common.header-menu.partial.html
@@ -29,13 +29,13 @@
                     <li class="menu-body__list-item"><a href="about_us.html" class="header__menu-link">
                         ABOUT US
                     </a></li>
-                    <li class="menu-body__list-item"><a href="contact_us.html" class="header__menu-link">
+                    <li class="menu-body__list-item"><a href="#" class="header__menu-link">
                         DISTRIBUTION
                     </a></li>
                     <li class="menu-body__list-item"><a href="collection.html" class="header__menu-link">
                         COLLECTION
                     </a></li>
-                    <li class="menu-body__list-item"><a href="contact_us.html" class="header__menu-link">
+                    <li class="menu-body__list-item"><a href="#" class="header__menu-link">
                         TESTING
                     </a></li>
                     <li class="menu-body__list-item"><a href="wineclub.html" class="header__menu-link">
