Done section welcome in about us

--- a/about_us.section-create_wines.partial.html
+++ b/about_us.section-create_wines.partial.html
@@ -23,84 +23,34 @@
           </p>
         </div>
 
-        <div class="create-wines-carousel">
-          <button class="carousel-control left">
-            &#10094;
-          </button>
-          <div class="carousel-wrapper">
-            <div class="card" id="card1">
-              <h2>Карточка 1</h2>
-              <div class="accordion">
-                <button class="accordion-button">Подробнее</button>
-                <div class="accordion-content">
-                  <p>Дополнительная информация для Карточки 1.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card" id="card2">
-              <h2>Карточка 2</h2>
-              <div class="accordion">
-                <button class="accordion-button">Подробнее</button>
-                <div class="accordion-content">
-                  <p>Дополнительная информация для Карточки 2.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card" id="card3">
-              <h2>Карточка 3</h2>
-              <div class="accordion">
-                <button class="accordion-button">Подробнее</button>
-                <div class="accordion-content">
-                  <p>Дополнительная информация для Карточки 3.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card" id="card4">
-              <h2>Карточка 4</h2>
-              <div class="accordion">
-                <button class="accordion-button">Подробнее</button>
-                <div class="accordion-content">
-                  <p>Дополнительная информация для Карточки 4.</p>
-                </div>
-              </div>
-            </div>
-            <div class="card" id="card5">
-              <h2>Карточка 5</h2>
-              <div class="accordion">
-                <button class="accordion-button">Подробнее</button>
-                <div class="accordion-content">
-                  <p>Дополнительная информация для Карточки 5.</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control right">
-            &#10095;
-          </button>
-        </div>
-
         <div class="welcome">
-          <div class="welcome-title">
-            <h2 class="welcome-title__text">~ WELCOME ~</h2>
-            <p class="welcome-title__subtitle">
-              Come Visit Us to Taste & Enjoy.
-            </p>
-          </div>
+          <div class="welcome-content">
+            <div class="welcome-title">
+              <h2 class="welcome-title__text">~ WELCOME ~</h2>
+              <p class="welcome-title__subtitle">
+                Come Visit Us to Taste & Enjoy.
+              </p>
+            </div>
 
-          <div class="welcome-text">
-            <p class="welcome-text__text">
-              Testing in atmospheric wine cellars;
-            </p>
-            <span class="welcome-text__text">
-              Possibility to buy the best wines at the best price.
-            </span>
-            <span class="welcome-text__subtext">
+            <div class="welcome-text">
+
+              <p class="welcome-text__text">
+                Testing in atmospheric wine cellars;
+              </p>
+
+              <p class="welcome-text__text">
+                Possibility to buy the best wines at the best price.
+              </p>
+              
+            </div>
+
+            <p class="welcome-subtext">
               Come visit us to enjoy wines and relax sipping a divine drink.
-            </span>
-          </div>
+            </p>
 
-          <div class="welcome-button">
-            <button class="welcome-button__btn">Learn More</button>
+            <div class="welcome-button">
+              <a href="contact_us.html" class="welcome-button__btn">Learn More</a>
+            </div>
           </div>
 
           <div class="welcome-cards__row">
