--- a/index.section-categories.partial.html
+++ b/index.section-categories.partial.html
@@ -37,28 +37,28 @@
                 <h3 class="section-categories__item-title">Vintage Wines</h3>
                 <p class="section-categories__item-description">Enjoy wines bottled in the 1980s and 1990s. Taste them
                     and order delivery.</p>
-                <a href="#" class="section-categories__item-button"><button>Learn More</button></a>
+                <a href="#"><button class="section-categories__item-button__learn">Learn More</button></a>
             </div>
             <div class="section-categories__item">
                 <img width="100" src="img/img_section-categories/image-list-2.png" alt="Image List 2" class="section-categories__item-image">
                 <h3 class="section-categories__item-title">The Best Grape</h3>
                 <p class="section-categories__item-description">We use only the highest quality grapes from our
                     plantations in Texas.</p>
-                <a href="#" class="section-categories__item-button"><button>Learn More</button></a>
+                <a href="#"><button class="section-categories__item-button__learn">Learn More</button></a>
             </div>
             <div class="section-categories__item">
                 <img width="100" src="img/img_section-categories/image-list-3.png" alt="Image List 3" class="section-categories__item-image">
                 <h3 class="section-categories__item-title">Beautiful Bottles</h3>
                 <p class="section-categories__item-description">We work with designers to create the most beautiful wine
                     bottles.</p>
-                <a href="#" class="section-categories__item-button"><button>Learn More</button></a>
+                <a href="#"><button class="section-categories__item-button__learn">Learn More</button></a>
             </div>
             <div class="section-categories__item">
                 <img width="100" src="img/img_section-categories/image-list-4.png" alt="Image List 4" class="section-categories__item-image">
                 <h3 class="section-categories__item-title">Interesting Tours</h3>
                 <p class="section-categories__item-description">Sign up for a tour and tasting and learn more about our
                     wines.</p>
-                <a href="#" class="section-categories__item-button"><button>Learn More</button></a>
+                <a href="#"><button class="section-categories__item-button__learn">Learn More</button></a>
             </div>
         </div>
     </section>
