--- a/collection.section-wine-content.partial.html
+++ b/collection.section-wine-content.partial.html
@@ -1,259 +1,255 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="shortcut icon"
-      href="https://placekitten.com/96/139"
-      type="image/x-icon"
-    />
-    <script
-      src="https://unpkg.com/htmx.org@1.9.10"
-      integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="css/index.css" />
-  </head>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Collection</title>
+</head>
   <body>
     <section class="wine-content">
+        <div class="wine-category" id="white-wine">
+            <em>~ White Wine~</em>
+       </div>
         <div class="white-wine">
-            <div class="wine-category" id="white-wine">
-                <em>~ WHITE ~</em>
-            </div>
-            <div class="left-list-wight-wine">
-                <ul>
-                    <li class="wine-item">
-                        <em class="wine-name">2016 Jezebel PN</em>
+            <div class="left-list-white-wine">
+                <div class="wine-list">
+                    <div class="wine-item">
+                        <div class="wine-name--price">
+                            <em class="wine-name">2016 Jezebel PN</em>
+                            <span class="wine-price">$50</span>
+                        </div>
                         <span class="wine-description">Light fruity wine with hints of freshly-cut grass.</span>
-                        <span class="wine-price">$50</span>
-                    </li>
-                    <li class="wine-item">
-                        <em class="wine-name">2014 Sand & Stone</em>
+                        
+                    </div>
+                    <div class="wine-item">
+                        <div class="wine-name--price">
+                            <em class="wine-name">2014 Sand & Stone</em>
+                            <span class="wine-price">$48</span>
+                        </div>
                         <span class="wine-description">Intense wine with a deep aftertaste, reminiscent of a
                             carefree
                             holiday.</span>
-                        <span class="wine-price">$48</span>
-                    </li>
-                    <li class="wine-item">
-                        <em class="wine-name">2013 Wild Card White</em>
+                    </div>
+                    <div class="wine-item">
+                        <div class="wine-name--price">
+                            <em class="wine-name">2013 Wild Card White</em>
+                            <span class="wine-price">$60</span>
+                        </div>
                         <span class="wine-description">Fortified wine, perfect for pairing with desserts.</span>
-                        <span class="wine-price">$60</span>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
-            <div class="right-list-wight-wine">
-                <ul>
-                    <li class="wine-item">
-                        <em class="wine-name">2016 Texas High Plains White</em>
+            <div class="right-list-white-wine">
+                <div lass="wine-list">
+                    <div class="wine-item">
+                        <div class="wine-name--price">
+                            <em class="wine-name">2016 Texas High Plains White</em>
+                            <span class="wine-price">$50</span>
+                        </div>   
                         <span class="wine-description">A fresh and light wine, great for enjoying a Texas
                             sunset.</span>
-                        <span class="wine-price">$50</span>
-                    </li>
-                    <li class="wine-item">
-                        <em class="wine-name">2017 Euphoria</em>
+                    </div>
+                    <div class="wine-item">
+                        <div class="wine-name--price">
+                            <em class="wine-name">2017 Euphoria</em>
+                            <span class="wine-price">$40</span>
+                        </div>
                         <span class="wine-description">Delight in one glass! Light and aromatic wine with a deep
                             aftertaste.</span>
-                        <span class="wine-price">$40</span>
-                    </li>
-                    <li class="wine-item">
-                        <em class="wine-name">2019 Texas Chenin Blanc</em>
+                    </div>
+                    <div class="wine-item">
+                        <div class="wine-name--price">
+                            <em class="wine-name">2019 Texas Chenin Blanc</em>
+                            <span class="wine-price">$47</span>
+                        </div>
                         <span class="wine-description">A versatile white wine that pleases all our guests.</span>
-                        <span class="wine-price">$47</span>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
+ <!--       <div class="wine-category" id="red-wine">
+            <em>~ Red Wine ~</em>
+        </div>
         <div class="red-wine">
-            <div class="wine-category" id="red-wine">
-                <em>~ RED ~</em>
-            </div>
             <div class="left-list-red-wine">
-                <ul class="wine-list">
-                    <li class="wine-item">
+                <div class="wine-list">
+                    <div class="wine-item">
                         <em class="wine-name">2016 Cabernet Sauvignon</em>
                         <span class="wine-description">Rich and robust with intense flavors of dark fruit, black
                             pepper, and oak.</span>
                         <span class="wine-price">$75</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">2013 Wild Card Red</em>
                         <span class="wine-description">Bold and velvety, boasting aromas of ripe cherries, plums,
                             and
                             vanilla.</span>
                         <span class="wine-price">$62</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">2015 Ultimate Pinot Noir</em>
                         <span class="wine-description">Medium-bodied with notes of blackberry, cedar, and
                             spice.</span>
                         <span class="wine-price">$70</span>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
             <div class="right-list-red-wine">
-                <ul class="wine-list">
-                    <li class="wine-item">
+                <div class="wine-list">
+                    <div class="wine-item">
                         <em class="wine-name">2015 Texas High Plains Red</em>
                         <span class="wine-description">Lively and elegant with flavors of ripe currants, tobacco,
                             and
                             chocolate.</span>
                         <span class="wine-price">$55</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">2013 The Aussie Red</em>
                         <span class="wine-description">Rich and powerful, with aromas of black currants, figs, and
                             herbs.</span>
                         <span class="wine-price">$67</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">2014 Grenache Syrah</em>
                         <span class="wine-description">Deep and earthy, with hints of blackberry, oak, and licorice.
                         </span>
                         <span class="wine-price">$75</span>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="wine-category" id="rose-wine">
+            <em>~ Rose Wine ~</em>
+        </div>
         <div class="rose-wine">
-            <div class="wine-category" id="rose-wine">
-                <em>~ ROSE ~</em>
-            </div>
             <div class="left-list-rose-wine">
-                <ul class="wine-list">
-                    <li class="wine-item">
+                <div class="wine-list">
+                    <div class="wine-item">
                         <em class="wine-name">2018 Texas High Plains Rose</em>
                         <span class="wine-description">Aromatic and floral with a splash of fruity sweetness.</span>
                         <span class="wine-price">$43</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">2017 Chef Rudy Rose</em>
                         <span class="wine-description">Soft and supple, with notes of strawberries and cream.</span>
                         <span class="wine-price">$52</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">2015 Vitiano Rosato</em>
                         <spanp class="wine-description">Balanced and smooth, with delicate aromas of ripe
                             raspberries.
                             </span>
-                            <span class="wine-price">$60</span>
-                    </li>
-                </ul>
+                        <span class="wine-price">$60</span>
+                    </div>
+                </div>
             </div>
             <div class="right-list-rose-wine">
-                <ul class="wine-list">
-                    <li class="wine-item">
+                <div class="wine-list">
+                    <div class="wine-item">
                         <em class="wine-name">2012 Winters's Hill Estate Dry Rose</em>
                         <span class="wine-description">A light and refreshing rose with hints of citrus and
                             peach.</span>
                         <span class="wine-price">$55</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">2014 Wolffer Estate Rose</em>
                         <span class="wine-description">Rich and dry, with a bouquet of ripe strawberry and
                             cranberry.</span>
                         <span class="wine-price">$59</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">2015 Ehlers Estate Sylviane Rose</em>
                         <span class="wine-description">Crisp and fruity, with a hint of watermelon and
                             wildflowers.</span>
                         <span class="wine-price">$67</span>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="wine-category">
+            <em>~ Sparkling Wine ~</em>
+        </div>
         <div class="sparkling-wine">
-            <div class="wine-category">
-                <em>~ SPARKLING ~</em>
-            </div>
             <div class="left-list-sparkling-wine">
-                <ul class="wine-list">
-                    <li class="wine-item">
+                <div class="wine-list">
+                    <div class="wine-item">
                         <em class="wine-name">Roederer Estate Brut</em>
                         <span class="wine-description">Enjoy a light and crisp sip of bubbly with this effervescent
                             sparkling brut.</span>
                         <span class="wine-price">$83</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">Brundlmayer Extra Brut</em>
                         <span class="wine-description">Indulge in a luxurious sip of bubbly with this decadent
                             sparkling brut.</span>
                         <span class="wine-price">$75</spanp>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
             <div class="right-list-sparkling-wine">
-                <ul class="wine-list">
-                    <li class="wine-item">
+                <div class="wine-list">
+                    <div class="wine-item">
                         <em class="wine-name">Mumm Napa Blanc de Blancs</em>
                         <span class="wine-description">Savor a creamy sip of bubbly with this inviting sparkling
                             brut.</span>
                         <span class="wine-price">$69</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">Domaine Chandon Etoile Brut</em>
                         <span class="wine-description">Treat yourself to a fruity sip of bubbly with this delightful
                             sparkling brut.</span>
                         <span class="wine-price">$72</span>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
+        <div class="wine-category">
+            <em>~ Canned Wine ~</em>
+        </div>
         <div class="canned-wine">
-            <div class="wine-category">
-                <em>~ CANNED ~</em>
-            </div>
             <div class="left-list-canned-wine">
-                <ul class="wine-list">
-                    <li class="wine-item">
+                <div class="wine-list">
+                    <div class="wine-item">
                         <em class="wine-name">Prettiest Can</em>
                         <span class="wine-description">A light and crisp blend of white grapes, perfect for a summer
                             picnic.</span>
                         <span class="wine-price">$13</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">PN Frico By Scarpetta</em>
                         <span class="wine-description">A sweet and fruity blend of rosé grapes, perfect for a night
                             out.</span>
                         <span class="wine-price">$18</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">Ready-to-drink Malbeco</em>
                         <span class="wine-description">A robust and flavorful Argentinian red, perfect for a night
                             in.</span>
                         <span class="wine-price">$15</span>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
             <div class="right-list-canned-wine">
-                <ul class="wine-list">
-                    <li class="wine-item">
+                <div class="wine-list">
+                    <div class="wine-item">
                         <em class="wine-name">Ferdinand California Albariño</em>
                         <span class="wine-description">Refreshing and bubbly, perfect for any celebration.</span>
                         <span class="wine-price">$15</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">Sweet Peach Sangria</em>
                         <span class="wine-description">An exotic blend of white wine and sweet peach flavors.</span>
                         <span class="wine-price">$17</span>
-                    </li>
-                    <li class="wine-item">
+                    </div>
+                    <div class="wine-item">
                         <em class="wine-name">Pinot Noir Special</em>
                         <span class="wine-description">A zesty and refreshing blend of red grapes and citrus
                             flavors.</span>
                         <span class="wine-price">$20</span>
-                    </li>
-                </ul>
+                    </div>
+                </div>
             </div>
         </div>
-    </section>
+    </section>-->
   </body>
