do welcome block in abour page

--- a/about_us.html
+++ b/about_us.html
@@ -19,6 +19,9 @@
   <!-- Блок 2 Граматович Олександр -->
   <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_story.partial.html">
   </section>
+  <!-- Блок 3 Карандашов Артем -->
+  <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-create_wines.partial.html">
+  </section>
   <!-- Блок 5 | Граматович Олександр-->
   <section data-hx-trigger="load" data-hx-swap="outerHTML" data-hx-get="about_us.section-our_partners.partial.html">
   </section>
