--- a/about_us.section-create_wines.partial.html
+++ b/about_us.section-create_wines.partial.html
@@ -10,7 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/about_us.css" />
   </head>
   <body>
     <div class="container">
@@ -32,7 +32,7 @@
               </p>
             </div>
 
-            <div class="welcome-text">
+            <div class="about-us__welcome-text">
 
               <p class="welcome-text__text">
                 Testing in atmospheric wine cellars;
