--- a/wineclub.html
+++ b/wineclub.html
@@ -46,6 +46,11 @@
       <section
         data-hx-trigger="load"
         data-hx-swap="outerHTML"
+        data-hx-get="wineclub.membership-benefits.partial.html"
+      ></section>
+      <section
+        data-hx-trigger="load"
+        data-hx-swap="outerHTML"
         data-hx-get="wineclub.get-your-membership-right-now.partial.html"
       ></section>
     </main>
