--- a/about_us.section-our_events.partial.html
+++ b/about_us.section-our_events.partial.html
@@ -86,7 +86,7 @@
             </div>
             <div class="contact-details">
               <p class="contact-details__label">Write us</p>
-              <a href="email:pinotnoir@email.com" class="contact-details__info">pinotnoir@email.com</a>
+              <a href="mailto:pinotnoir@email.com" class="contact-details__info">pinotnoir@email.com</a>
             </div>
           </div>
         </div>
