--- a/about_us.section-our_team.partial.html
+++ b/about_us.section-our_team.partial.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <section class="our_team">
@@ -21,19 +22,41 @@
                     <p class="proffesion"> <em>Discoverer</em> </p>
                     <p class="name_surname"><em>John Smith</em></p>
                     <p class="description">John Smith opened his interest in wine more than fourteen years ago working at a farm and in a wine bar.</p>
-                    <div class="john_smith_accordion">
-                        <div class="accordion_item">
-                            <label for="" class="accordion_tittle">Read more</label>
-                            <input type="checkbox" class="accordion_input">
-                            <div class="accordion_text">
-                                <p>
-                                    His urge to get closer to the action led him to Texas where he was inspired by the best winery owners and winemaking professionals while building and managing their wine programs for several local restaurants. 
-
-Smith decided to deepen his interest in winemaking industry and gained a Certificate in Viticulture from the Santa Rosa Junior College. Next he pursued a degree in Enology, Plant Science, and Chemistry, and gained winemaking experience while also experimenting with his favorite wine in his own backyard project with his wife, Mary. Finally, he embarked upon an extensive search throughout the area for a suitable location to start a commercial vineyard. That was a foundation of the Pinot Noir Winery.
-                                </p>
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header">
+                            <button
+                              class="accordion-button collapsed"
+                              type="button"
+                              data-bs-toggle="collapse"
+                              data-bs-target="#flush-collapseOne"
+                              aria-expanded="false"
+                              aria-controls="flush-collapseOne"
+                            >
+                              <p class="button_text">Read more</p>
+                            </button>
+                          </h2>
+                          <div
+                            id="flush-collapseOne"
+                            class="accordion-collapse collapse"
+                            data-bs-parent="#accordionFlushExample"
+                          >
+                            <div class="accordion-body description">
+                              His urge to get closer to the action led him to Texas where he was
+                              inspired by the best winery owners and winemaking professionals
+                              while building and managing their wine programs for several local
+                              restaurants. Smith decided to deepen his interest in winemaking
+                              industry and gained a Certificate in Viticulture from the Santa Rosa
+                              Junior College. Next he pursued a degree in Enology, Plant Science,
+                              and Chemistry, and gained winemaking experience while also
+                              experimenting with his favorite wine in his own backyard project
+                              with his wife, Mary. Finally, he embarked upon an extensive search
+                              throughout the area for a suitable location to start a commercial
+                              vineyard. That was a foundation of the Pinot Noir Winery.
                             </div>
+                          </div>
                         </div>
-                    </div>
+                      </div>
                 </div>
             </div>
 
@@ -110,5 +133,6 @@ Smith decided to deepen his interest in winemaking industry and gained a Certifi
             </div>
         </div>
     </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
